cmake_minimum_required(VERSION 3.23.29)

project(Creazione_di_tutti_gli_esguibili
	VERSION 0.9
	LANGUAGES C
	DESCRIPTION "Creazione di tutti gli eseguibili")

add_executable(valgrind1 valgrind1.c)
add_executable(valgrind2 valgrind2.c)
add_executable(valgrind3 valgrind3.c)
add_executable(valgrind4 valgrind4.c)


